test/lambda/negative/semantic/binary_invalid_base64.ls
// @negative
// @description: binary base64 payloads reject characters outside the standard alphabet
b'\64!!'
